# brickops

./: .prettierrc.json  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230514214337_sets.sql
src-tauri/src/: main.rs
src/components/: Greet.vue
src/layouts/: BaseLayout.vue
src/plugins/: api.ts  env.d.ts  pinia.ts
src/router/: index.ts
src/stores/: theme.store.ts
src/utils/: index.ts  injectStrict.ts
src/utils/types/: without.type.ts  xor.type.ts
src/views/: HomeView.vue  SetsView.vue  SettingsView.vue
