[package]
name = "brickvault"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = [ "derive" ] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1.20.0", features = ["macros"] }
serde_json = "1.0"
home = "0.5.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
